<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/setting"
        android:title="@string/setting_title">
        <menu>
            <item
                android:id="@+id/setting_favorite"
                android:orderInCategory="1"
                android:title="@string/setting_favorite"
                app:showAsAction="ifRoom"/>
            <item
                android:id="@+id/setting_popular"
                android:orderInCategory="1"
                android:title="@string/setting_popular"
                app:showAsAction="ifRoom"/>

            <item
                android:id="@+id/setting_top_rated"
                android:orderInCategory="2"
                android:title="@string/setting_top_rated"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>