<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/ll_outer_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3">
            <ImageView
                android:id="@+id/iv_detail_movie_poster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:contentDescription="@string/detail_image_description"
                android:scaleType="centerCrop"/>
            <LinearLayout
                android:id="@+id/ll_inner_right"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_for_original_title"
                    android:textSize="@dimen/default_text_size"
                    android:textStyle="bold"
                    android:paddingLeft="@dimen/default_padding"
                    android:paddingRight="@dimen/default_padding"
                    android:paddingTop="@dimen/default_padding"/>
                <TextView
                    android:id="@+id/tv_original_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/default_text_size"
                    android:paddingLeft="@dimen/default_padding"
                    android:paddingRight="@dimen/default_padding"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_for_release_date"
                    android:textSize="@dimen/default_text_size"
                    android:textStyle="bold"
                    android:paddingLeft="@dimen/default_padding"
                    android:paddingRight="@dimen/default_padding"
                    android:paddingTop="@dimen/default_padding"/>
                <TextView
                    android:id="@+id/tv_release_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/default_text_size"
                    android:paddingLeft="@dimen/default_padding"
                    android:paddingRight="@dimen/default_padding"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_for_user_rating"
                    android:textSize="@dimen/default_text_size"
                    android:textStyle="bold"
                    android:paddingLeft="@dimen/default_padding"
                    android:paddingRight="@dimen/default_padding"
                    android:paddingTop="@dimen/default_padding"/>
                <TextView
                    android:id="@+id/tv_user_rating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/default_text_size"
                    android:paddingLeft="@dimen/default_padding"
                    android:paddingRight="@dimen/default_padding"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_for_plot_synopsis"
            android:textSize="@dimen/default_text_size"
            android:textStyle="bold"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingTop="@dimen/default_padding"/>
        <TextView
            android:id="@+id/tv_plot_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/default_text_size"
            android:paddingLeft="@dimen/default_padding"
            android:paddingRight="@dimen/default_padding"
            android:paddingBottom="@dimen/default_padding"/>
    </LinearLayout>
</ScrollView>